feat: enhance documentation and consistency checks for facilities and routing